--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             referrerpolicy="no-referrer" 
         />
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-        <script src="./assets/script/index.js" type="module"></script>
     </head>
     <body>
         <main>
@@ -31,9 +30,11 @@
                 <dialog>
                     <h2>Challenge yourslef</h2>
                     <p>Defend your reputation</p>
-                    <p>90 seconds! type as many words as you see on the screen.</p>
-                    <p>Press "Start" to play. Enjoy :)</p>
-                    <button class="start">Start</button>
+                    <p>99 seconds!</p>
+                    <p>Type as many correct words as possible</p>
+                    <p>as you see on the screen.</p>
+                    <p>Enjoy now!</p>
+                    <p>&#127774;</p>
                 </dialog>
                 <div class="time-mark">
                     <div class="time-box">
@@ -48,11 +49,9 @@
                     <div class="light">
                         <i class="fa-solid fa-traffic-light"></i>
                         <div class="red"></div>
-                        <div class="amber"></div>
-                        <div class="green"></div>
                     </div>
                     <div class="word-box">
-                        <p><i class="fa-solid fa-chevron-right fa-flip-horizontal left"></i><span  class="word-display"></span><i class="fa-solid fa-chevron-right right" style="text-align: end;"></i></p>
+                        <p><i class="fa-solid fa-chevron-right fa-flip-horizontal left"></i><span  class="word-display"> - - - - </span><i class="fa-solid fa-chevron-right right" style="text-align: end;"></i></p>
                     </div>
                     <form>
                         <input type="text" placeholder="enter word" class="word-input">
@@ -64,4 +63,5 @@
             </div>
         </main>
     </body>
+    <script src="./assets/script/index.js" type="module"></script>
 </html> 
