--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <p>as you see on the screen.</p>
                     <p>Enjoy now!</p>
                     <p>&#127774;</p>
+                    <p class="close">Click anywhere to close instruction</p>
                 </dialog>
                 <div class="time-mark">
                     <div class="time-box">
@@ -54,7 +55,7 @@
                         <p><i class="fa-solid fa-chevron-right fa-flip-horizontal left"></i><span  class="word-display"> - - - - </span><i class="fa-solid fa-chevron-right right" style="text-align: end;"></i></p>
                     </div>
                     <form>
-                        <input type="text" placeholder="enter word" class="word-input">
+                        <input type="text" class="word-input">
                     </form>
                     <div class="buttons-box">
                         <button class="start-btn"> Play now ! </button>
