--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <body>
         <main>
             <div class="container">
-                <dialog>
+                <dialog class="inf">
                     <h2>Challenge yourslef</h2>
                     <p>Defend your reputation</p>
                     <p>99 seconds!</p>
@@ -52,7 +52,7 @@
                         <div class="red"></div>
                     </div>
                     <div class="word-box">
-                        <p><i class="fa-solid fa-chevron-right fa-flip-horizontal left"></i><span  class="word-display"> - - - - </span><i class="fa-solid fa-chevron-right right" style="text-align: end;"></i></p>
+                        <p><i class="fa-solid fa-van-shuttle"></i></i><span  class="word-display"> - - - - </span><i class="fa-solid fa-van-shuttle fa-flip-horizontal"></i></i></p>
                     </div>
                     <form>
                         <input type="text" class="word-input">
@@ -62,6 +62,17 @@
                     </div>
                 </div>
             </div>
+                <div class="score-canvas">
+                    <h2>Score history</h2>
+                    <span class="close-btn"><i class="fa-solid fa-circle-xmark"></i></span>
+                    <table>
+                        <tr>
+                            <th>Rank</th>
+                            <th>Score</th>
+                            <th>Date</th>
+                        </tr>  
+                    </table>
+                </div>
         </main>
     </body>
     <script src="./assets/script/index.js" type="module"></script>
